--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prod": "webpack --env.mode production"
   },
   "dependencies": {
-    "animejs": "^3.1.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "sal.js": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
